refractored code and implemented swagger-ui