@@ -1,12 +1,12 @@
 /**
- * Copyright (c) 2024, WSO2 LLC. (https://www.wso2.com).
+ * Copyright (c) 2025, WSO2 LLC. (https://www.wso2.com).
  * <p>
  * WSO2 LLC. licenses this file to you under the Apache License,
  * Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License.
  * You may obtain a copy of the License at
  * <p>
- *     http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  * <p>
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
@@ -30,6 +30,7 @@ import org.wso2.financial.services.accelerator.consent.mgt.dao.models.DetailedCo
 import org.wso2.financial.services.accelerator.consent.mgt.service.constants.ConsentCoreServiceConstants;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -56,7 +57,7 @@ public class ConsentMgtServiceTestData {
     public static final String SAMPLE_PERMISSION = "samplePermission";
     public static final String SAMPLE_REASON = "sample reason";
     public static final String SAMPLE_ACTION_BY = "admin@wso2.com";
-    public static final String  SAMPLE_PREVIOUS_STATUS = "Received";
+    public static final String SAMPLE_PREVIOUS_STATUS = "Received";
     public static final String SAMPLE_CONSENT_FILE = "sample file content";
     public static final String AWAITING_UPLOAD_STATUS = "awaitingUpload";
     public static final String SAMPLE_AUTHORIZATION_ID_1 = "88888";
@@ -78,39 +79,45 @@ public class ConsentMgtServiceTestData {
         }
     };
 
-//    public static final ArrayList<String> SAMPLE_ACCOUNT_ID_LIST = new ArrayList<String> (List.of(SAMPLE_ACCOUNT_ID));
-//
-//    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP = Map.of(
-//            "accountID1", new ArrayList<>(List.of("permission1", "permission2")),
-//            "accountID2", new ArrayList<>(List.of("permission3", "permission4"))
-//    );
-//
-//    public static final ArrayList<String> SAMPLE_CONSENT_ATTRIBUTES_KEYS = new ArrayList<String>
-//            (List.of("x-request-id", "idempotency-key"));
-//
-//    public static final ArrayList<String> SAMPLE_USER_IDS_LIST = new ArrayList<String>
-//            (List.of("userID1", "userID2", "userID3"));
-//
-//    public static final ArrayList<String> SAMPLE_CONSENT_IS_ARRAY = new ArrayList<String> (List.of(CONSENT_ID));
-//
-//    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP2 = Map.of(
-//            SAMPLE_ACCOUNT_ID, new ArrayList<> (List.of("permission5", "permission6")));
-//
-//    public static final ArrayList<String> SAMPLE_CONSENT_TYPES_LIST = new ArrayList<>
-//            (List.of("accounts", "payments", "cof"));
-//
-//    public static final ArrayList<String> SAMPLE_CONSENT_STATUSES_LIST = new ArrayList<>
-//            (List.of("created", "authorised", "awaitingAuthorization"));
-//
-//    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP3 = Map.of(
-//            "mismatching account ID", new ArrayList<> (List.of("permission5", "permission6")));
-//
-//    public static final ArrayList<String> SAMPLE_CLIENT_IDS_LIST = new ArrayList<>(Arrays
-//            .asList("clientID1", "clientID2", "clientID3"));
-//    public static final ArrayList<String> MAPPING_IDS_LIST = new ArrayList<> (List.of(SAMPLE_MAPPING_ID,
-//            SAMPLE_MAPPING_ID_2));
-//    public static final ArrayList<String> UNMATCHED_MAPPING_IDS = new ArrayList<> (List.of("4444", "5555"));
-//
+    public static final ArrayList<String> SAMPLE_ACCOUNT_ID_LIST =
+            new ArrayList<String>(Arrays.asList(SAMPLE_ACCOUNT_ID));
+
+    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP =
+            new HashMap<String, ArrayList<String>>() {{
+                put("accountID1", new ArrayList<>(Arrays.asList("permission1", "permission2")));
+                put("accountID2", new ArrayList<>(Arrays.asList("permission3", "permission4")));
+            }};
+
+    public static final ArrayList<String> SAMPLE_CONSENT_ATTRIBUTES_KEYS =
+            new ArrayList<String>(Arrays.asList("x-request-id", "idempotency-key"));
+
+    public static final ArrayList<String> SAMPLE_USER_IDS_LIST =
+            new ArrayList<String>(Arrays.asList("userID1", "userID2", "userID3"));
+
+    public static final ArrayList<String> SAMPLE_CONSENT_IS_ARRAY = new ArrayList<String>(Arrays.asList(CONSENT_ID));
+
+    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP2 =
+            new HashMap<String, ArrayList<String>>() {{
+                put(SAMPLE_ACCOUNT_ID, new ArrayList<>(Arrays.asList("permission5", "permission6")));
+            }};
+
+    public static final ArrayList<String> SAMPLE_CONSENT_TYPES_LIST =
+            new ArrayList<String>(Arrays.asList("accounts", "payments", "cof"));
+
+    public static final ArrayList<String> SAMPLE_CONSENT_STATUSES_LIST =
+            new ArrayList<String>(Arrays.asList("created", "authorised", "awaitingAuthorization"));
+
+    public static final Map<String, ArrayList<String>> SAMPLE_ACCOUNT_IDS_AND_PERMISSIONS_MAP3 =
+            new HashMap<String, ArrayList<String>>() {{
+                put("mismatching account ID", new ArrayList<>(Arrays.asList("permission5", "permission6")));
+            }};
+
+    public static final ArrayList<String> SAMPLE_CLIENT_IDS_LIST =
+            new ArrayList<String>(Arrays.asList("clientID1", "clientID2", "clientID3"));
+    public static final ArrayList<String> MAPPING_IDS_LIST =
+            new ArrayList<String>(Arrays.asList(SAMPLE_MAPPING_ID, SAMPLE_MAPPING_ID_2));
+    public static final ArrayList<String> UNMATCHED_MAPPING_IDS = new ArrayList<String>(Arrays.asList("4444", "5555"));
+
     public static ConsentResource getSampleTestConsentResource() {
 
         return getSampleTestConsentResource(ConsentMgtServiceTestData.SAMPLE_CURRENT_STATUS);
